@@ -1,3 +1,5 @@
+- In irptransmogrifier.[sh,bat] do not use explicit configuration file. (Bengt)
+
 Changes for v2.10
 -- Private build 1
 - Add RF Tools to provide RF4CE support for the TI CC2531EMK Packet Sniffer (Graham)
